@@ -50,6 +50,9 @@ The relationship types are:
 * suggests
 * conflicts
 
+If the phase is omitted, it will default to I<runtime>; thus, specifying
+"Prereqs / Recommends" in your dist.ini is equivalent to I<RuntimeRecommends>.
+
 Not all of these phases are useful for all tools, especially tools that only
 understand version 1.x CPAN::Meta files.
 
@@ -61,9 +64,10 @@ sub __from_name {
 
   # such as C<configure>, C<build>, C<test> and C<runtime>.  Values are
   # relationship such as C<requires>, C<prefers>, or C<recommends>.  The
+  # phase component is optional and will default to Runtime.
 
   my ($phase, $type) = $name =~ /\A
-    (Build|Test|Runtime|Configure|Develop)
+    (Build|Test|Runtime|Configure|Develop)?
     (Requires|Recommends|Suggests|Conflicts)
   \z/x;
 
