@@ -5,6 +5,8 @@ Revision history for {{$dist->name}}
 
           some minor refactoring in listdeps (Jon Rockway)
 
+          phase defaults to Runtime if omitted (Jonathan Yu)
+
 4.200004  2011-02-11 16:17:37 America/New_York
 
           Add Tests for Config::MVP 2.200 changes. ( Kent Fredric )
